2003-08-24  Martyn Russell  <ginxd@btopenworld.com>

	* loudmouth/lm-connection.c:
	(connection_in_event): Use an int for bytes_read. Since bytes_read is
	  now also used for gnutls return value (which can be < 0) a gsize
	  (unsigned) is not a good idea...
	
2003-08-15  Mikael Hallendal  <micke@imendio.com>

        * Release 0.13.2

        * configure.in: Bumped to 0.13.2
        * NEWS: Updated for 0.13.2

	* loudmouth/lm-parser.c: (parser_end_node_cb):
        - Don't crash on </stream:stream>. Fixes bug #117952

2003-08-05  Mikael Hallendal  <micke@imendio.com>

        * Release 0.13.1

        * NEWS: Updated for 0.13.1
	* configure.in: Bumped to 0.13.1

2003-08-05  Mikael Hallendal  <micke@imendio.com>

	* acinclude.m4: Added GnuTLS-macro from GnuTLS-distribution.
 
	* configure.in: Added comment if SSL support disabled.

	* loudmouth.spec.in: Added Build-requirment on gtk-doc.

        * Release 0.13
	
	* NEWS: Updated for 0.13  
	* configure.in: Bumped to 0.13

2003-08-04  Mikael Hallendal  <micke@imendio.com>

	* README: 
	- Added comment about GnuTLS and --with-included-libtasn1.
	- Fixes LM-7 and bug #117801

2003-08-04  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_in_event): 
	- Disconnect and report that we are disconnected if read doesn't work.
	  This solved the problem when Gossip eats 100% CPU because the server
	  got disconnected. Fixes LM-9.

	* loudmouth/Makefile.am: Use -DRUNTIME_ENDIAN, fixes LM-8, bug #118502.

	* loudmouth/lm-connection.c: 
	- Modifed patch from Mikhail Zabaluev, fixes LM-5.
	* (connection_free): close connection if it's still open.
	* (connection_do_open): Store away the GSource handlers.
	* (connection_do_close): Remove the GSources from the IOChannel.
	* (connection_in_event, connection_error_event, connection_hup_event):
	- Return FALSE if io_channel = NULL.

	* configure.in:
	- Submitted patch for Loudmouth from Mikhail Zabaluev to